--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-async-errors": "^3.1.1",
     "express-session": "^1.17.1",
     "helmet": "^3.23.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
