--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express-session": "^1.17.1",
     "helmet": "^3.23.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.10",
+    "shorthash": "0.0.2",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
